--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -3,26 +3,29 @@
 {% load static %}
 
 {% block extra_css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'learning_logs/css/index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}?v={{ timestamp }}">
 {% endblock %}
 
 {% block title %}Learning Logs{% endblock %}
 
 {% block content %}
+    {% comment %} This is going to fit all screens. (vw/ vh) for desk, mob, tab views {% endcomment %}
     <header class="landing-banner">
-        <p class="landing-text">Learning</p><p class="landing-text lt2">Logs</p>
+        <img src="{% static 'images/mobile-header-note-bear2.png' %}" id="img-note-bear">
+        <p class="landing-text">Learning</p><p class="landing-text lt2">Logs<span class="cursor">_</span></p> {% comment %} Type this Logs stylishly {% endcomment %}
         <p class="landing-desc">Best place to jote down your daily learning progress.</p>
         <div class="button-container">
-            <button data-url="{% url 'learning_logs:login' %}" onclick="redirectToUrl(this, 'remain')" id="login-btn">Login</button>
+            <button data-url="{% url 'learning_logs:login' %}" onclick="redirectToUrl(this, 'remain')" id="login-btn" class="btn-opace">Login</button>
             <button data-url="{% url 'learning_logs:signup' %}" onclick="redirectToUrl(this, 'remain')" id="signup-btn"> Sign UP </button>
         </div>
-        <img src="{%static 'learning_logs/images/note-guy.png'%}" id="img-note-guy">
+        <img src="{%static 'images/tablet-desktop-header-note-guy.png'%}" id="img-note-guy">
+        <img src="{% static 'images/purple-flower-vase-cropped.png' %}" id="img-flower-vase">
     </header>
 
 <main>
     <div class="landing-card">
         <div class="l-pic">
-            <img src="{%static 'learning_logs/images/l-pic1.png'%}">
+            <img src="{%static 'images/l-pic1.png'%}">
         </div>
         <div class="l-text">
             <p>✍️ Turn every lesson into a story worth remembering — write your learning experience.</p>
@@ -31,7 +34,7 @@
 
     <div class="landing-card">
         <div class="l-pic">
-            <img src="{%static 'learning_logs/images/l-pic2.png'%}" id="l-pic2">
+            <img src="{%static 'images/l-pic2.png'%}" id="l-pic2">
         </div>
         <div class="l-text" id="l-text2">
             <p>🌍 Where knowledge meets reflection — record, grow, and own your learning journey.</p>
@@ -40,7 +43,7 @@
 
     <div class="landing-card">
         <div class="l-pic">
-            <img src="{%static 'learning_logs/images/l-pic3.png'%}">
+            <img src="{%static 'images/l-pic3.png'%}">
         </div>
         <div class="l-text">
             <p>🔓 Don’t just learn — capture it, shape it, and make it yours forever.</p>
