--- a/static/css/l-base.css
+++ b/static/css/l-base.css
@@ -3,6 +3,7 @@
     colors: purple, naturals, (blue for hovers) and their tones
     icons: depict a kind of learning and writing
 */
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons+Outlined');
 
 footer {
     display: flex;
@@ -13,6 +14,7 @@ footer {
     padding: 2rem;
     box-sizing: border-box;
     flex-wrap: wrap; /* Allows stacking on mobile */
+
 }
 
 /* Left side (text + icons) */
@@ -55,7 +57,10 @@ footer {
     text-decoration: underline;
 }
 
-/* Right side (footer image) */
+/* 
+    Right side (footer image) 
+    on mobile app, the footer image is meant to be behind the texts (z-index)
+*/
 .footer-right {
     display: flex;
     justify-content: flex-end;
@@ -87,4 +92,36 @@ footer {
     .contact-item img {
         width: 16px;
     }
+}
+
+.truncate-sx, .truncate-bx { /* small box, big box */
+    white-space: nowrap;        /* Keep text on one line */
+    overflow: hidden;           /* Hide overflowing text */
+    text-overflow: ellipsis;    /* Add the "..." */
+    width: 100px;               /* Required! */
+    display: block;             /* Or inline-block / flex item */
+}
+
+.truncate-bx { /* big box */
+  width: 300px;               /* Required! */
+}
+
+nav span {
+    cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
 }
