--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="{% static 'users/css/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/u-base.css' %}?v={{ timestamp }}">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     {% block extra_css %}{% endblock %}
@@ -12,33 +12,11 @@
 </head>
 <body>
     {% block content %}{% endblock %}
+    
 </body>
-<script>
-  const passwordInput1 = document.getElementById('password1');
-  const passwordInput2 = document.getElementById('password2');
-  const toggleIcons = document.querySelectorAll('.toggle-password');
 
-  toggleIcons.forEach(icon => {
-    icon.addEventListener('click', () => {
-      const isHidden = passwordInput1.type === 'password';
-
-      // Toggle both inputs
-      passwordInput1.type = isHidden ? 'text' : 'password';
-      passwordInput2.type = isHidden ? 'text' : 'password';
-
-      // Add or remove highlight
-      [passwordInput1, passwordInput2].forEach(input => {
-        input.classList.toggle('visible', isHidden);
-      });
-
-      // Update both icons for visual feedback
-      toggleIcons.forEach(i => {
-        i.classList.toggle('fa-eye', !isHidden);
-        i.classList.toggle('fa-eye-slash', isHidden);
-        i.classList.toggle('active', isHidden);
-      });
-    });
-  });
-</script>
+{% comment %} Default JS {% endcomment %}
+<script type="text/javascript" src="{% static 'js/auth.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 {% block extra_js %}{% endblock %}
 </html>
